--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord-api-types": "^0.32.1",
     "discord.js": "^13.6.0",
     "distube": "^3.3.4",
+    "dotenv": "^16.0.1",
     "execa": "^6.1.0",
     "ffmpeg-static": "^4.4.1",
     "libsodium-wrappers": "^0.7.10",
