--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "ffmpeg-static": "^4.4.1",
     "libsodium-wrappers": "^0.7.10",
     "mkdirp": "^1.0.4",
+    "opusscript": "^0.0.8",
     "petitio": "^1.4.0",
-    "ytdl-core": "^4.11.0",
+    "ytdl-core": "github:kabirsingh2004/node-ytdl-core",
     "ytpl": "^2.3.0",
     "ytsr": "^3.8.0"
   }
