--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "mkdirp": "^1.0.4",
     "opusscript": "^0.0.8",
     "petitio": "^1.4.0",
-    "ytdl-core": "github:kabirsingh2004/node-ytdl-core",
+    "ytdl-core": "^4.11.0",
     "ytpl": "^2.3.0",
     "ytsr": "^3.8.0"
   }
