--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@discordjs/voice": "^0.9.0",
     "@distube/spotify": "^1.2.1",
     "@distube/yt-dlp": "^1.0.2",
+    "axios": "^0.27.2",
     "dargs": "^8.1.0",
     "discord-api-types": "^0.32.1",
     "discord.js": "^13.6.0",
