--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "StepSkop",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.5.3",
+    "@discordjs/opus": "^0.8.0",
     "@discordjs/rest": "^0.4.1",
     "@discordjs/voice": "^0.9.0",
     "@distube/spotify": "^1.2.1",
@@ -27,6 +27,8 @@
     "ffmpeg-static": "^4.4.1",
     "libsodium-wrappers": "^0.7.10",
     "mkdirp": "^1.0.4",
+    "mongodb": "^4.8.0",
+    "mongoose": "^6.4.4",
     "opusscript": "^0.0.8",
     "petitio": "^1.4.0",
     "ytdl-core": "^4.11.0",
