--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "=17.6.0"
+    "node": ">=16.6.0"
   },
   "author": "StepSkop",
   "license": "ISC",
