--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "=18.4.0",
-    "npm": "=8.12.1"
+    "node": ">=16.6.0"
   },
   "author": "StepSkop",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.8.0",
+    "@discordjs/opus": "^0.5.3",
     "@discordjs/rest": "^0.4.1",
     "@discordjs/voice": "^0.9.0",
     "@distube/spotify": "^1.2.1",
@@ -28,7 +27,6 @@
     "ffmpeg-static": "^4.4.1",
     "libsodium-wrappers": "^0.7.10",
     "mkdirp": "^1.0.4",
-    "mongodb": "^4.8.0",
     "mongoose": "^6.4.4",
     "opusscript": "^0.0.8",
     "petitio": "^1.4.0",
