--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "=18.4.0"
+    "node": ">=16.6.0"
   },
   "author": "StepSkop",
   "license": "ISC",
@@ -27,7 +27,6 @@
     "ffmpeg-static": "^4.4.1",
     "libsodium-wrappers": "^0.7.10",
     "mkdirp": "^1.0.4",
-    "mongoose": "^6.4.4",
     "opusscript": "^0.0.8",
     "petitio": "^1.4.0",
     "ytdl-core": "^4.11.0",
