--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
   "author": "StepSkop",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "0.5.3",
-    "@discordjs/rest": "0.4.1",
-    "@discordjs/voice": "0.9.0",
-    "@distube/spotify": "1.2.1",
-    "@distube/yt-dlp": "1.0.2",
-    "axios": "0.27.2",
-    "dargs": "8.1.0",
-    "discord-api-types": "0.32.1",
-    "discord.js": "13.6.0",
-    "distube": "3.3.4",
-    "dotenv": "16.0.1",
-    "execa": "6.1.0",
-    "ffmpeg-static": "4.4.1",
-    "libsodium-wrappers": "0.7.10",
-    "mkdirp": "1.0.4",
-    "opusscript": "0.0.8",
-    "petitio": "1.4.0",
-    "ytdl-core": "4.11.0",
-    "ytpl": "2.3.0",
-    "ytsr": "3.8.0"
+    "@discordjs/opus": "^0.5.3",
+    "@discordjs/rest": "^0.4.1",
+    "@discordjs/voice": "^0.9.0",
+    "@distube/spotify": "^1.2.1",
+    "@distube/yt-dlp": "^1.0.2",
+    "axios": "^0.27.2",
+    "dargs": "^8.1.0",
+    "discord-api-types": "^0.32.1",
+    "discord.js": "^13.6.0",
+    "distube": "^3.3.4",
+    "dotenv": "^16.0.1",
+    "execa": "^6.1.0",
+    "ffmpeg-static": "^4.4.1",
+    "libsodium-wrappers": "^0.7.10",
+    "mkdirp": "^1.0.4",
+    "opusscript": "^0.0.8",
+    "petitio": "^1.4.0",
+    "ytdl-core": "^4.11.0",
+    "ytpl": "^2.3.0",
+    "ytsr": "^3.8.0"
   }
 }
