--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Discord Bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "patch-package"
   },
   "engines": {
     "node": "=16.15.0"
