--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@discordjs/voice": "^0.9.0",
     "@distube/spotify": "^1.4.1",
     "@distube/yt-dlp": "^1.0.2",
+    "@distube/ytdl-core": "^4.11.10",
     "axios": "^0.27.2",
     "dargs": "^8.1.0",
     "discord-api-types": "^0.32.1",
@@ -31,6 +32,7 @@
     "mongodb": "^4.8.0",
     "mongoose": "^6.4.4",
     "opusscript": "^0.0.8",
+    "patch-package": "^6.5.1",
     "petitio": "^1.4.0",
     "ytdl-core": "^4.11.2",
     "ytpl": "^2.3.0",
