--- a/package.json
+++ b/package.json
@@ -7,23 +7,21 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "patch-package"
   },
-  "engines": {
-    "node": "=16.15.0"
-  },
   "author": "StepSkop",
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.8.0",
     "@discordjs/rest": "^0.4.1",
-    "@discordjs/voice": "^0.9.0",
-    "@distube/spotify": "^1.4.1",
-    "@distube/yt-dlp": "^1.0.2",
-    "@distube/ytdl-core": "^4.11.10",
+    "@discordjs/voice": "^0.17.0",
+    "@distube/spotify": "^2.0.2",
+    "@distube/youtube": "^1.0.4",
+    "@distube/yt-dlp": "^2.0.1",
+    "@distube/ytdl-core": "^4.14.4",
     "axios": "^0.27.2",
     "dargs": "^8.1.0",
     "discord-api-types": "^0.32.1",
-    "discord.js": "^13.6.0",
-    "distube": "^3.3.4",
+    "discord.js": "^14.7.1",
+    "distube": "^5.0.2",
     "dotenv": "^16.0.1",
     "execa": "^6.1.0",
     "ffmpeg-static": "^4.4.1",
@@ -34,6 +32,7 @@
     "opusscript": "^0.0.8",
     "patch-package": "^6.5.1",
     "petitio": "^1.4.0",
+    "sodium-native": "^4.1.1",
     "ytdl-core": "^4.11.2",
     "ytpl": "^2.3.0",
     "ytsr": "^3.8.0"
